--- a/test/load-libraries/expected.html
+++ b/test/load-libraries/expected.html
@@ -5,7 +5,7 @@
     Lorem ipsum dolor sit amet consectetur adipiscing, elit porttitor taciti nostra dis potenti donec, fusce gravida primis metus.
     </p>
      <p class="p">Example Java</p>
-	<pre class="pre codeblock java"><code>
+	<pre class="pre codeblock language-java"><code>
 <span class="ph token comment">/*
  * To change this template, choose Tools | Templates
  * and open the template in the editor.
@@ -31,7 +31,7 @@
 	</code></pre>
 
 	<p class="p">Example Dockerfile</p>
-	<pre class="pre codeblock dockerfile"><code>
+	<pre class="pre codeblock language-dockerfile"><code>
 <span class="ph token keyword">FROM</span> openjdk<span class="ph token punctuation">:</span>8<span class="ph token punctuation">-</span>jdk<span class="ph token punctuation">-</span>alpine
 <span class="ph token keyword">VOLUME</span> /tmp
 <span class="ph token keyword">ADD</span> target/hello<span class="ph token punctuation">-</span>docker<span class="ph token punctuation">-</span>0.0.1<span class="ph token punctuation">-</span>SNAPSHOT.jar hello<span class="ph token punctuation">-</span>docker<span class="ph token punctuation">-</span>app.jar
@@ -40,7 +40,7 @@
 	</code></pre>
 
   <p class="p">Example no highlights</p>
-  <pre class="pre codeblock none"><code>
+  <pre class="pre codeblock language-none"><code>
 Plain text = ""
   </code></pre>
 
