fixing basic highlight

--- a/test/html/expected.html
+++ b/test/html/expected.html
@@ -1,11 +1,11 @@
 <article role="article" aria-labelledby="ariaid-title1">
-   <h1 class="title topictitle1" id="ariaid-title1">topic</h1>
-   <div class="body">
-      <p class="p">
+  <h1 class="title topictitle1" id="ariaid-title1">topic</h1>
+  <div class="body">
+    <p class="p">
     Lorem ipsum dolor sit amet consectetur adipiscing, elit porttitor taciti nostra dis potenti donec, fusce gravida primis metus.
     </p>
-      <p class="p">This page’s logo (SVG), highlighted with Prism:</p>
-      <pre class="pre codeblock language-markup"><code>
+     <p class="p">This page’s logo (SVG), highlighted with Prism:</p>
+	<pre class="pre codeblock language-markup"><code>
 	 	
 <span class="ph token tag"><span class="ph token tag"><span class="ph token punctuation">&lt;</span>svg</span> <span class="ph token attr-name">xmlns</span><span class="ph token attr-value"><span class="ph token punctuation">=</span><span class="ph token punctuation">"</span>http://www.w3.org/2000/svg<span class="ph token punctuation">"</span></span> <span class="ph token attr-name">viewBox</span><span class="ph token attr-value"><span class="ph token punctuation">=</span><span class="ph token punctuation">"</span>0 0 200 170<span class="ph token punctuation">"</span></span><span class="ph token punctuation">&gt;</span></span>
 	<span class="ph token tag"><span class="ph token tag"><span class="ph token punctuation">&lt;</span>path</span> <span class="ph token attr-name">fill</span><span class="ph token attr-value"><span class="ph token punctuation">=</span><span class="ph token punctuation">"</span>#fff<span class="ph token punctuation">"</span></span> <span class="ph token attr-name">d</span><span class="ph token attr-value"><span class="ph token punctuation">=</span><span class="ph token punctuation">"</span>M55.37 131.5H48.4v9.13h6.97c1.67 0 2.92-.4 3.78-1.22.85
@@ -30,17 +30,19 @@
 	-10.05h2.8v21.2h-2.4<span class="ph token punctuation">"</span></span><span class="ph token punctuation">/&gt;</span></span>
 <span class="ph token tag"><span class="ph token tag"><span class="ph token punctuation">&lt;/</span>svg</span><span class="ph token punctuation">&gt;</span></span>
 	</code></pre>
-      <p class="p">Example:</p>
-      <pre class="pre codeblock language-js"><code><span class="ph token keyword">var</span> Prism <span class="ph token operator">=</span> <span class="ph token function">require</span><span class="ph token punctuation">(</span><span class="ph token string">'prismjs'</span><span class="ph token punctuation">)</span><span class="ph token punctuation">;</span>
+
+	<p class="p">Example:</p>
+	<pre class="pre codeblock language-js"><code><span class="ph token keyword">var</span> Prism <span class="ph token operator">=</span> <span class="ph token function">require</span><span class="ph token punctuation">(</span><span class="ph token string">'prismjs'</span><span class="ph token punctuation">)</span><span class="ph token punctuation">;</span>
 
 <span class="ph token comment">// The code snippet you want to highlight, as a string</span>
 <span class="ph token keyword">var</span> code <span class="ph token operator">=</span> <span class="ph token string">"var data = 1;"</span><span class="ph token punctuation">;</span>
 
 <span class="ph token comment">// Returns a highlighted HTML string</span>
 <span class="ph token keyword">var</span> html <span class="ph token operator">=</span> Prism<span class="ph token punctuation">.</span><span class="ph token function">highlight</span><span class="ph token punctuation">(</span>code<span class="ph token punctuation">,</span> Prism<span class="ph token punctuation">.</span>languages<span class="ph token punctuation">.</span>javascript<span class="ph token punctuation">,</span> <span class="ph token string">'javascript'</span><span class="ph token punctuation">)</span><span class="ph token punctuation">;</span></code></pre>
-      <p class="p">Requiring <code class="ph codeph">prismjs</code> will load the default languages: <code class="ph codeph">markup</code>, <code class="ph codeph">css</code>,
-		<code class="ph codeph">clike</code> and <code class="ph codeph">javascript</code>. You can load more languages with the
+
+	<p class="p">Requiring <code class="ph codeph language-markup">prismjs</code> will load the default languages: <code class="ph codeph language-markup">markup</code>, <code class="ph codeph language-markup">css</code>,
+		<code class="ph codeph language-markup">clike</code> and <code class="ph codeph language-markup">javascript</code>. You can load more languages with the
 		<code class="ph codeph language-javascript"><span class="ph token function">loadLanguages</span><span class="ph token punctuation">(</span><span class="ph token punctuation">)</span></code> utility, which will automatically handle any required dependencies.
 	</p>
-   </div>
+  </div>
 </article>
