Remove default use of language-markup

--- a/test/html/expected.html
+++ b/test/html/expected.html
@@ -40,8 +40,8 @@
 <span class="ph token comment">// Returns a highlighted HTML string</span>
 <span class="ph token keyword">var</span> html <span class="ph token operator">=</span> Prism<span class="ph token punctuation">.</span><span class="ph token function">highlight</span><span class="ph token punctuation">(</span>code<span class="ph token punctuation">,</span> Prism<span class="ph token punctuation">.</span>languages<span class="ph token punctuation">.</span>javascript<span class="ph token punctuation">,</span> <span class="ph token string">'javascript'</span><span class="ph token punctuation">)</span><span class="ph token punctuation">;</span></code></pre>
 
-	<p class="p">Requiring <code class="ph codeph language-markup">prismjs</code> will load the default languages: <code class="ph codeph language-markup">markup</code>, <code class="ph codeph language-markup">css</code>,
-		<code class="ph codeph language-markup">clike</code> and <code class="ph codeph language-markup">javascript</code>. You can load more languages with the
+	<p class="p">Requiring <code class="ph codeph">prismjs</code> will load the default languages: <code class="ph codeph">markup</code>, <code class="ph codeph">css</code>,
+		<code class="ph codeph">clike</code> and <code class="ph codeph">javascript</code>. You can load more languages with the
 		<code class="ph codeph language-javascript"><span class="ph token function">loadLanguages</span><span class="ph token punctuation">(</span><span class="ph token punctuation">)</span></code> utility, which will automatically handle any required dependencies.
 	</p>
   </div>
