--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=http://prismjsdita-ot.readthedocs.io/" />
+    <meta http-equiv="refresh" content="0; url=https://jason-fox.github.io/dita-ot-plugins/prismjs" />
   </head>
 
   <body>
-    <p><a href="http://prismjsdita-ot.readthedocs.io/">Redirect</a></p>
+    <p><a href="https://jason-fox.github.io/dita-ot-plugins/prismjs">Redirect</a></p>
   </body>
 </html>
